--- a/styles/index.css
+++ b/styles/index.css
@@ -9,8 +9,13 @@ html {
 }
 
 body {
-  min-height: 100%;
+  min-height: 100vh;
 }
+
+
+
+
+
 @media (prefers-reduced-motion) {
   html {
     scroll-behavior: auto;
